# -armabrute_opencl

./: .gitignore  armabrut_opencl.sln  readme.txt
armabrut_opencl/: CMakeLists.txt  armabrut.cpp  armabrut.h  armabrut_opencl.vcxproj  armabrut_opencl.vcxproj.filters  brute_opencl.cl  brute_opencl.cpp  dll.cpp  dll.h  md5.h  test.py
